--- a/http-rpc-core/pom.xml
+++ b/http-rpc-core/pom.xml
@@ -54,6 +54,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.101tec/zkclient -->
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.9</version>
+        </dependency>
+
 
     </dependencies>
 
